test/semantic-errors/19.pas
program p;
begin var i:integer;
i:=2.0;
end.
